syntax = "proto3";
package ecommerce;
option go_package = "./ecommerce";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}